tests/ui/type-alias-impl-trait/hidden_behind_projection_behind_struct_field.stderr
error: unconstrained opaque type
  --> $DIR/hidden_behind_projection_behind_struct_field.rs:17:18
   |
LL |     type Assoc = impl std::fmt::Debug;
   |                  ^^^^^^^^^^^^^^^^^^^^
   |
   = note: `Assoc` must be used in combination with a concrete type within the same impl

error[E0308]: mismatched types
  --> $DIR/hidden_behind_projection_behind_struct_field.rs:20:22
   |
LL |     type Assoc = impl std::fmt::Debug;
   |                  -------------------- the expected opaque type
...
LL |         Foo { field: () }
   |                      ^^ expected opaque type, found `()`
   |
   = note: expected opaque type `<Bar as Trait>::Assoc`
                found unit type `()`
note: this item must have a `#[defines(<Bar as Trait>::Assoc)]` attribute to be able to define hidden types
  --> $DIR/hidden_behind_projection_behind_struct_field.rs:19:8
   |
LL |     fn foo() -> Foo<Bar> {
   |        ^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
